--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- подгружаем стили -->
     
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/my_style.css"> 
     <link rel="stylesheet" href="css/search_bar.css"> 
     <link rel="stylesheet" href="css/delete_button.css"> 
     <!-- ставим стиль для фона -->
