--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/my_style.css"> 
     <link rel="stylesheet" href="css/search_bar.css"> 
     <link rel="stylesheet" href="css/delete_button.css"> 
+    <link rel="stylesheet" href="css/background_style.css">
     <!-- ставим стиль для фона -->
         <style>
           html, body {
